initial header and footer in UI, move to materialize instead of bootstrap

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>crazy-eights</title>
     <meta name="description" content="Crazy Eights"/>
-    <meta name="author" content="Tom Johnson"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
     <div id="main"></div>
